--- a/scene/layers/roads.yaml
+++ b/scene/layers/roads.yaml
@@ -73,6 +73,25 @@ layers:
                         outline:
                             # color: [0.373,0.673,0.657]
                             color: [0.259,0.482,0.678]
+        roads-major_road:
+            filter: { kind: major_road }
+            draw:
+                lines:
+                    color: [0.086,0.135,0.260]
+                    width: 0.15
+                    outline:
+                        color: [[8,[0.278,0.499,0.667]],[12,[0.329,0.588,0.784]]]
+                        width: 0.3px
+            roads-major_road-trunk_primary:
+                filter: { highway: [trunk, primary] }
+                draw:
+                    lines:
+                        color: [0.086,0.135,0.260]
+                        width: [[8,0.1px],[9,0.1px],[11,0.1px],[12,0.75px],[13,1px],[14,2px],[15,3px]]
+                        outline:
+                            color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
+                            width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px]]
+
 
 
 
