--- a/scene/layers/roads.yaml
+++ b/scene/layers/roads.yaml
@@ -49,10 +49,36 @@ layers:
             draw:
                 lines:
                     color: [0.086,0.135,0.260]
-                    width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,4px]]
+                    width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,4px],[16,4px],[17,2px],[18,3px]]
                     outline:
                         color: [0.541,0.969,0.949]
-                        width: [[8,0.5px],[9,0.6px],[12,1px]]
+                        width: [[8,0.5px],[9,0.6px],[12,1px],[16,1px],[17,0px]]
+                dashed:
+                    order: 40
+                    color: [0.557,0.909,0.887]
+                    width: [[8,0px],[16,0px],[17,4px],[18,5px]]
+                lines-highway-z17-dark:
+                    order: 38
+                    style: lines
+                    color: [0.086,0.135,0.260]
+                    width: [[8,0px],[16,0px],[17,12px],[18,15px]]
+                lines-highway-z17-casing-light:
+                    order: 36
+                    style: lines
+                    color: [0.541,0.969,0.949]
+                    width: [[8,0px],[16,0px],[17,15px],[18,18px]]
+                lines-highway-z18-dark:
+                    order: 34
+                    style: lines
+                    color: [0.086,0.135,0.260]
+                    width: [[8,0px],[16,0px],[17,15px],[18,22px]]
+                lines-highway-z18-casing-light:
+                    order: 32
+                    style: lines
+                    color: [0.800,1.000,0.987]
+                    width: [[8,0px],[16,0px],[17,15px],[18,25px]]
+
+
             roads-highway-link:
                 filter: { is_link: yes } # on- and off-ramps, etc
                 draw:
@@ -60,11 +86,31 @@ layers:
                         width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px]]
                         outline:
                             width: [[8,0px],[9,0.5px]]
+                    dashed:
+                        visible: false
+                    lines-highway-z17-dark:
+                        visible: false
+                    lines-highway-z17-casing-light:
+                        visible: false
+                    lines-highway-z18-dark:
+                        visible: false
+                    lines-highway-z18-casing-light:
+                        visible: false
                 roads-highway-link-early:
                     filter: { $zoom: { min: 13, max: 15 } }
                     draw:
                         lines:
                             order: 352
+                        dashed:
+                            visible: false
+                        lines-highway-z17-dark:
+                            visible: false
+                        lines-highway-z17-casing-light:
+                            visible: false
+                        lines-highway-z18-dark:
+                            visible: false
+                        lines-highway-z18-casing-light:
+                            visible: false
             roads-highway-tunnel:
                 filter: { is_tunnel: yes, $zoom: { min: 13 } }
                 draw:
@@ -73,6 +119,16 @@ layers:
                         outline:
                             # color: [0.373,0.673,0.657]
                             color: [0.259,0.482,0.678]
+                    dashed:
+                        visible: false
+                    lines-highway-z17-dark:
+                        visible: false
+                    lines-highway-z17-casing-light:
+                        visible: false
+                    lines-highway-z18-dark:
+                        visible: false
+                    lines-highway-z18-casing-light:
+                        visible: false
         roads-major_road:
             filter: { kind: major_road }
             draw:
@@ -98,3 +154,8 @@ layers:
 styles:
     roads:
         base: lines
+
+    dashed:
+        base: lines
+        dash: [0.5,0.5]
+        dash_background_color: [0.086,0.149,0.290]
