--- a/scene/layers/roads.yaml
+++ b/scene/layers/roads.yaml
@@ -1,7 +1,7 @@
 layers:
     roads:
         data: { source: mapzen }
-        filter: { not: { kind: rail } }
+        filter: { not: { kind: [rail] } }
         draw:
             lines:
                 styles: roads
@@ -49,31 +49,37 @@ layers:
             draw:
                 lines:
                     color: [0.086,0.135,0.260]
-                    width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,4px],[16,4px],[17,2px],[18,3px]]
+                    width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,4px],[16,4px],[17,5px],[18,6px]]
                     outline:
-                        color: [0.541,0.969,0.949]
+                        # color: [0.541,0.969,0.949]
+                        color: [0.728,0.970,0.958]
                         width: [[8,0.5px],[9,0.6px],[12,1px],[16,1px],[17,0px]]
-                dashed:
-                    order: 40
+                dashes-skinny:
+                    #order: 40
+                    order: function () { return (feature.sort_key * 10 - 1); }
                     color: [0.557,0.909,0.887]
-                    width: [[8,0px],[16,0px],[17,4px],[18,5px]]
+                    width: [[8,0px],[16,0px],[17,7px],[18,8px]]
                 lines-highway-z17-dark:
-                    order: 38
+                    #order: 38
+                    order: function () { return (feature.sort_key * 10 - 2); }
                     style: lines
                     color: [0.086,0.135,0.260]
                     width: [[8,0px],[16,0px],[17,12px],[18,15px]]
                 lines-highway-z17-casing-light:
-                    order: 36
+                    #order: 36
+                    order: function () { return (feature.sort_key * 10 - 3); }
                     style: lines
                     color: [0.541,0.969,0.949]
                     width: [[8,0px],[16,0px],[17,15px],[18,18px]]
                 lines-highway-z18-dark:
-                    order: 34
+                    #order: 34
+                    order: function () { return (feature.sort_key * 10 - 4); }
                     style: lines
                     color: [0.086,0.135,0.260]
                     width: [[8,0px],[16,0px],[17,15px],[18,22px]]
                 lines-highway-z18-casing-light:
-                    order: 32
+                    #order: 32
+                    order: function () { return (feature.sort_key * 10 - 5); }
                     style: lines
                     color: [0.800,1.000,0.987]
                     width: [[8,0px],[16,0px],[17,15px],[18,25px]]
@@ -86,7 +92,7 @@ layers:
                         width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px]]
                         outline:
                             width: [[8,0px],[9,0.5px]]
-                    dashed:
+                    dashes-skinny:
                         visible: false
                     lines-highway-z17-dark:
                         visible: false
@@ -159,3 +165,12 @@ styles:
         base: lines
         dash: [0.5,0.5]
         dash_background_color: [0.086,0.149,0.290]
+
+    dashes-skinny:
+        base: lines
+        dash: [1,1]
+        dash_background_color: [0.086,0.149,0.290]
+        shaders:
+            blocks:
+                position: |
+                    v_texcoord.y *= 3.;
