--- a/scene/layers/roads.yaml
+++ b/scene/layers/roads.yaml
@@ -60,32 +60,38 @@ layers:
                     width: [[8,0px],[16,0px],[17,4px],[18,5px]]
 
             roads-highway-nolink:
-                filter: { not: {is_link: yes} }
+                filter:
+                    not: {is_link: yes}
+                        # - $zoom: { min: 17 }
                 roads-highway-nolink-z17:
-                    filter: { $zoom: 17 }
+                    # filter: { $zoom: { min: 17 } }
                     draw:
-                        dark:
+                        roads-highway-nolink-z17-dark:
                             style: lines
                             order: 38
-                            color: [0.086,0.135,0.260]
+                            # color: [0.086,0.135,0.260]
+                            color: pink
                             width: [[8,0px],[16,0px],[17,12px],[18,15px]]
-                        light:
+                        roads-highway-nolink-z17-light:
                             style: lines
                             order: 36
-                            color: [0.541,0.969,0.949]
+                            # color: [0.541,0.969,0.949]
+                            color: red
                             width: [[8,0px],[16,0px],[17,15px],[18,18px]]
                 roads-highway-nolink-z18:
-                    filter: { $zoom: 18 }
+                    # filter: { $zoom: { min: 18 } }
                     draw:
-                        dark:
+                        roads-highway-nolink-z18-dark:
                             style: lines
                             order: 34
-                            color: [0.086,0.135,0.260]
+                            # color: [0.086,0.135,0.260]
+                            color: lightblue
                             width: [[8,0px],[16,0px],[17,15px],[18,22px]]
-                        light:
+                        roads-highway-nolink-z18-light:
                             style: lines
                             order: 32
-                            color: [0.800,1.000,0.987]
+                            # color: [0.800,1.000,0.987]
+                            color: blue
                             width: [[8,0px],[16,0px],[17,15px],[18,25px]]
 
             roads-highway-link:
