--- a/scene/layers/roads.yaml
+++ b/scene/layers/roads.yaml
@@ -55,67 +55,71 @@ layers:
                         color: [0.541,0.969,0.949]
                         width: [[8,0.5px],[9,0.6px],[12,1px],[16,1px],[17,0px]]
                 dashed:
-                    order: 540
+                    order: function () { return (feature.sort_key * 10 - 1); }
+                    #order: 540
                     color: [0.557,0.909,0.887]
                     width: [[8,0px],[16,0px],[17,4px],[18,5px]]
 
-            roads-highway-nolink:
-                filter:
-                    not: {is_link: yes}
-                roads-highway-nolink-z17:
-                    # filter: { $zoom: { min: 17 } }
-                    draw:
-                        roads-highway-nolink-z17-dark:
-                            style: lines
-                            order: 538
-                            color: [0.086,0.135,0.260]
-                            width: [[8,0px],[16,0px],[17,12px],[18,15px]]
-                        roads-highway-nolink-z17-light:
-                            style: lines
-                            order: 536
-                            color: [0.541,0.969,0.949]
-                            width: [[8,0px],[16,0px],[17,15px],[18,18px]]
+            # Show 0 width roads one zoom before they have width, so they can scale up instead of popping in
+            roads-highway-z17:
+                filter: 
+                    $zoom: { min: 16 }
+                draw:
+                    casing1:
+                        #order: 538
+                        order: function () { return (feature.sort_key * 10 - 2); }
+                        color: [0.086,0.135,0.260]
+                        width: [[8,0px],[16,0px],[17,12px],[18,15px]]
+                    casing2:
+                        #order: 536
+                        order: function () { return (feature.sort_key * 10 - 3); }
+                        color: [0.541,0.969,0.949]
+                        width: [[8,0px],[16,0px],[17,15px],[18,18px]]
                 roads-highway-nolink-z18:
-                    # filter: { $zoom: { min: 18 } }
+                    filter: 
+                        $zoom: { min: 17 }
                     draw:
-                        roads-highway-nolink-z18-dark:
-                            style: lines
-                            order: 534
+                        casing3:
+                            #order: 534
+                            order: function () { return (feature.sort_key * 10 - 4); }
                             color: [0.086,0.135,0.260]
                             width: [[8,0px],[16,0px],[17,15px],[18,22px]]
-                        roads-highway-nolink-z18-light:
-                            style: lines
-                            order: 532
+                        casing4:
+                            #order: 532
+                            order: function () { return (feature.sort_key * 10 - 5); }
                             color: [0.800,1.000,0.987]
                             width: [[8,0px],[16,0px],[17,15px],[18,25px]]
 
-            roads-highway-link:
-                filter: { is_link: yes } # on- and off-ramps, etc
-                draw:
-                    lines:
-                        width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px]]
-                        outline:
-                            width: [[8,0px],[9,0.5px]]
-                    dashed:
-                        visible: false
-                roads-highway-link-z17-18:
-                    filter: { $zoom: [17, 18]}
+                roads-highway-link:
+                    filter: { is_link: yes } # on- and off-ramps, etc
                     draw:
                         lines:
-                            visible: false
-
-                roads-highway-link-early:
-                    filter: { $zoom: { min: 13, max: 15 } }
-                    draw:
-                        lines:
-                            order: 352
+                            width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px]]
+                            outline:
+                                width: [[8,0px],[9,0.5px]]
                         dashed:
                             visible: false
-                    roads-highway-link-early-z17-18:
-                        filter: { $zoom: [17, 18]}
+                        casing1:
+                            visible: false
+                        casing2:
+                            visible: false
+                        casing3:
+                            visible: false
+                        casing4:
+                            visible: false
+
+                    roads-highway-link-early:
+                        filter: { $zoom: { min: 13, max: 15 } }
                         draw:
                             lines:
+                                order: 352
+                            dashed:
                                 visible: false
+                        roads-highway-link-early-z17-18:
+                            filter: { $zoom: [17, 18]}
+                            draw:
+                                lines:
+                                    visible: false
 
             roads-highway-tunnel:
                 filter: { is_tunnel: yes, $zoom: { min: 13 } }
@@ -151,9 +155,6 @@ layers:
                             color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
                             width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px]]
 
-
-
-
 styles:
     roads:
         base: lines
@@ -162,3 +163,15 @@ styles:
         base: lines
         dash: [0.5,0.5]
         dash_background_color: [0.086,0.149,0.290]
+
+    casing1:
+        base: lines
+
+    casing2:
+        base: lines
+
+    casing3:
+        base: lines
+
+    casing4:
+        base: lines
